[package]
name = "json2type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
serde_json = { version = "1.0.111", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
